# resume

./: .gitignore  .markdownlint.json  Makefile  README.md  archives.html  authors.html  categories.html  index.html  justfile  mise.toml  pyproject.toml  tags.html
.github/workflows/: deploy.yml
author/: alexey-vorobyov.html
category/: resume.html
education/: index.html
employment/: index.html
extracurricular/: index.html
feeds/: all.atom.xml
profile/: index.html
scripts/: generate-deploy-message.sh
src/: pelicanconf.py  publishconf.py
src/content/: 01-profile.md  01-summary.md  02-employment.md  03-education.md  04-extracurricular.md
src/output/: index.html
src/output/author/: alexey-vorobyov.html
src/output/category/: resume.html
src/output/education/: index.html
src/output/employment/: index.html
src/output/extracurricular/: index.html
src/output/profile/: index.html
src/resume/static/css/: resume.css
src/resume/templates/: article.html  base.html  index.html  print_button.html  profile.html  sidebar.html  tailwind-config.html
summary/: index.html
theme/css/: resume.css
